Bug 1515448 - Set eglSwapInterval to 0 on wayland r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D20126